--- a/lull.css
+++ b/lull.css
@@ -251,3 +251,32 @@ ul li.playing {
   pointer-events: none;
   color: var(--violet);
 }
+
+.close-button {
+  font-size: 22px;
+  font-weight: bold;
+  color: black;
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  box-shadow: none;
+  transition: all 0.3s ease;
+}
+
+.close-button:hover {
+  transform: scale(1.2);
+
+  box-shadow: none;
+}
+
+.close-button:active {
+  box-shadow: none;
+  transform: scale(1);
+}
