--- a/metho.css
+++ b/metho.css
@@ -244,7 +244,7 @@ nav .nav-bar .logo a {
   position: absolute; /* Change to absolute */
   width: 600px;
   height: 200px;
-  background-color:  rgb(130, 11, 130);
+  background-color:  rgb(120, 79, 162);
   top: 4px; /* Adjust as needed */
   left: 25%; /* Adjust as needed */
   transform: translateX(-50%);
@@ -259,7 +259,7 @@ nav .nav-bar .logo a {
 .vio {
   width: 100%;
   height:80px;
-  background-color: rgb(130, 11, 130);
+  background-color: rgb(120, 79, 162);
   margin-top: -5px;
 }
 
@@ -272,18 +272,18 @@ h2 {
   margin: 0px -1.8px 0px 0px;
   margin-left: 50px;
   text-align: left;
-  color: lightseagreen;
+  color: black;
   
 }
 hr{
-border-color:#83ca6a;
-border-style:solid;
-border-width:2px;
-width: 500px;
-font-size:18px;
-line-height:30.6px;
-text-align:left;
-margin-left: 50px;
+  border-color:#83ca6a;
+  border-style:solid;
+  border-width:2px;
+  width: 600px;
+  font-size:18px;
+  line-height:30.6px;
+  text-align:left;
+  margin-left: 50px;
 }
 .khoi1{
     display: flex;
@@ -434,14 +434,14 @@ h3 {
   margin-top: 30px;
   width: 100%;
   height: 200px;
-  background-color: rgb(114, 175, 53);
+  background-color: rgb(131, 202, 106);
   position: relative;
 }
 .banner-left{
   position:absolute;
   height: 100%;
   width: 600px;
-  background-color: rgb(142, 110, 172);
+  background-color: rgb(120, 79, 162);
   left: 5%;
 }
 .banner-left h3{
@@ -465,13 +465,28 @@ h3 {
 }
 a>i {
 
-  font-size: 100px;
+  font-size: 50px;
 }
 .contact{
   display: flex;
-
+  flex-direction: row;
+  padding-left: 100px;
 }
-
+.hii{
+  margin-left: 50px;
+}
+.hi{
+  margin-left: 50px;
+}
+.thr{
+  margin-left: 50px;
+}
+.contact i{
+  color: #4070f4;
+}
+.contact a{
+  height: 40px;
+}
 
 
 
