--- a/Timer.css
+++ b/Timer.css
@@ -428,6 +428,35 @@ h3 {
   }
 }
 
+.close-button {
+  font-size: 22px;
+  font-weight: bold;
+  color: white;
+  background-color: transparent;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+
+  box-shadow: none;
+  transition: all 0.3s ease;
+}
+
+.close-button:hover {
+  transform: scale(1.2);
+
+  box-shadow: none;
+}
+
+.close-button:active {
+  box-shadow: none;
+  transform: scale(1);
+}
+
 @media screen and (max-width: 768px) {
   #ytime {
     font-size: 1.5em;
