--- a/Home.css
+++ b/Home.css
@@ -45,11 +45,9 @@ nav .nav-bar {
   justify-content: space-between;
 }
 
-nav .nav-bar .logo a {
-  font-size: 25px;
-  text-decoration: none;
-  font-weight: 500;
-  color: rgb(120, 79, 162);
+.nav-bar .logo img {
+  width: 77px; /* Thay đổi kích thước theo nhu cầu của bạn */
+  height: auto; /* Tự động điều chỉnh chiều cao để giữ tỉ lệ */
 }
 
 .nav-bar .nav-links {
