--- a/metho.css
+++ b/metho.css
@@ -254,13 +254,14 @@ nav .nav-bar .logo a {
   font-size: 1em;
   line-height: 1.6;
   color: #fbfafa;
+  margin-top: 30px;
 }
 
 .vio {
   width: 100%;
   height:80px;
   background-color: rgb(120, 79, 162);
-  margin-top: -5px;
+  margin-top: -6px;
 }
 
 h2 {
@@ -486,6 +487,10 @@ a>i {
 }
 .contact a{
   height: 40px;
+}
+.logo img{
+  width: 100px;
+  height: 80px;
 }
 
 
